--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
-    "@babel/runtime": "^7.6.0"
+    "@babel/runtime": "^7.6.0",
+    "polished": "^3.4.1",
+    "warning": "^4.0.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.1.0",
@@ -60,6 +62,7 @@
     "@testing-library/react-hooks": "^2.0.1",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/warning": "^3.0.0",
     "css-loader": "^3.2.0",
     "docz": "^1.3.2",
     "docz-theme-default": "^1.2.0",
