chore: 修复 git 换行符问题

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,8 @@
 .gitignore text eol=lf
 .gitattributes text eol=lf
 *.txt text eol=lf
+*.html text eol=lf
+*.css text eol=lf
 LICENSE text eol=lf
 
 [core]
