--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@testing-library/react-hooks": "^2.0.1",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/styled-components": "^4.1.19",
     "@types/warning": "^3.0.0",
     "css-loader": "^3.2.0",
     "docz": "^1.3.2",
@@ -75,8 +76,10 @@
     "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-responsive": "^8.0.1",
     "react-test-renderer": "^16.9.0",
     "style-loader": "^1.0.0",
+    "styled-components-breakpoint": "^2.1.1",
     "ts-lib-tools": "^0.4.7",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.6.3",
