--- a/package.json
+++ b/package.json
@@ -84,5 +84,8 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.6.3",
     "webpack-docz-ghpages-plugin": "^0.4.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
