--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     ]
   },
   "peerDependencies": {
-    "react": ">=16.8.0"
+    "react": ">=16.8.0",
+    "styled-components": ">=4.0.0"
   },
   "files": [
     "dist",
@@ -71,6 +72,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
     "@babel/runtime": "^7.6.3",
+    "deepmerge": "^4.2.2",
     "polished": "^3.4.1",
     "warning": "^4.0.3"
   },
@@ -87,6 +89,7 @@
     "docz-theme-default": "^1.2.0",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.5",
+    "jest-styled-components": "^6.0.0",
     "lint-staged": "^9.2.5",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
@@ -96,6 +99,9 @@
     "react-dom": "^16.9.0",
     "react-responsive": "^8.0.1",
     "react-test-renderer": "^16.9.0",
+    "remark-html": "^10.0.0",
+    "remark-html-katex": "^2.0.0",
+    "remark-math": "^2.0.0",
     "style-loader": "^1.0.0",
     "styled-components-breakpoint": "^2.1.1",
     "ts-lib-tools": "^0.4.7",
