--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sinoui/theme",
-  "version": "0.3.4",
+  "version": "0.3.5-0",
   "description": "sinoui 主题定制库。",
   "license": "MIT",
   "main": "dist/index.js",
