--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sinoui/theme",
-  "version": "1.0.0-beat.0",
+  "version": "1.0.0-beta.3",
   "description": "sinoui 主题定制库。",
   "license": "MIT",
   "main": "dist/index.js",
